--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #logo h1{
 	font-family:"Trebuchet MS";
 	font-size:26px;
-	color:#F76B0C;
+	color:#00FF80;
 	font-weight:normal;
 	text-decoration:none;
 	padding-left:40px;
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #logo h4 {
 	font-family:"Trebuchet MS";
 	font-size:11px;
-	color:#808080;
+	color:#FF0000;
 	font-weight:normal;
 	text-decoration:none;
 	padding-left:75px;
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 	width:129px;
 	height:25px;
 	text-align:center;
-	background-color:#F4A80A;
+	background-color:#FF0000;
 	border-left:1px solid #FFF;
 	padding-top:4px;
 }
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #leftbar h2{
 	font-family:"Trebuchet MS";
 	font-size:26px;
-	color:#EE8907;
+	color:#FF0000;
 	font-weight:normal;
 	text-decoration:none;
 	padding-left:40px;
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #leftbar a {
 	font-family:"Trebuchet MS";
 	font-size:11px;
-	color:#EE8907;
+	color:#FF0000;
 	font-weight:bold;
 	text-decoration:none;
 	padding:0px 40px;
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #leftbar a:hover {
 	font-family:"Trebuchet MS";
 	font-size:11px;
-	color:#000;
+	color:#FF0000;
 	font-weight:bold;
 	text-decoration:none;
 	padding:0px 40px;
@@ -214,7 +214,7 @@ h1, h2, h3, h4, h5, h6, p, form {
 #email a:hover{
 	font-family:"Trebuchet MS";
 	font-size:11px;
-	color:#fff;
+	color:#f00;
 	font-weight:normal;
 	text-decoration:none;
 	padding:0px 40px;
