Add content to Hello GitHub theme

--- a/_layouts/HelloGitHub.html
+++ b/_layouts/HelloGitHub.html
@@ -22,7 +22,7 @@
 			<a href="blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
-			{ content }
+			{{ content }}
 			<footer class="site-footer">
 				<span class="site-footer-owner">
 					<a href="https://github.com/debium/www">
