Apply browser check js to Hello GitHub

--- a/_layouts/HelloGitHub.html
+++ b/_layouts/HelloGitHub.html
@@ -22,7 +22,9 @@
 			<a href="blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
-			{{ content }}
+			<div id="browser">
+				{{ content }}
+			</div>
 			<footer class="site-footer">
 				<span class="site-footer-owner">
 					<a href="https://github.com/debium/www">
