--- a/_layouts/TEXAS.html
+++ b/_layouts/TEXAS.html
@@ -24,6 +24,14 @@
 		<section class="main-content">
 			<div id="browser">
 				{{ content }}
+				<script>
+					if (screen.width>=1500){
+						var script= document.createElement('script');
+						script.type= 'text/javascript';
+						script.src= 'https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson';
+						document.getElementsByTagName('head')[0].appendChild(script);
+					}
+				</script>
 			</div>
 			<footer class="site-footer">
 				<span class="site-footer-owner">
@@ -52,11 +60,6 @@
 				</span>
 			</footer>
 		</section>
-		<script>
-			if (screen.width>=1500){
-				document.getElementById("TEXAS").innerHTML='<p>Texas is amazing. That\'s why I made a .geojson representation of it, as shown below. It\'s hosted on the same repo as this blog here, so you can grab it by clicking the "Fork me on Github" button and then "Download ZIP". Once you extract the directory, these wonderful 328 lines of code are yours to keep, subject to the MIT License. Enjoy!</p><p><script src="https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson"><\/script></p>';
-			}
-		</script>
 		<a href="https://github.com/debium/www/fork">
 			<img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png">
 		</a>
