--- a/_layouts/TEXAS.html
+++ b/_layouts/TEXAS.html
@@ -29,7 +29,7 @@
 						var script= document.createElement('script');
 						script.type= 'text/javascript';
 						script.src= 'https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson';
-						document.getElementsByTagName('head')[0].appendChild(script);
+						document.getElementsByTagName('browser')[0].appendChild(script);
 					}
 				</script>
 			</div>
