Fix getElementById in TEXAS

--- a/_layouts/TEXAS.html
+++ b/_layouts/TEXAS.html
@@ -9,7 +9,7 @@ layout: default
 			var script= document.createElement('script');
 			script.type= 'text/javascript';
 			script.src= 'https://embed.github.com/view/geojson/ethertyper/www/gh-pages/TEXAS.geojson';
-			document.getElementsById('browser')[0].appendChild(script);
+			document.getElementById('browser')[0].appendChild(script);
 		}
 	</script>
 </div>
