--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 			<a href="blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
+			<script src="https://ethertyper.github.io/battleforthenet-widget/widget.js" async></script>
 			{{ content }}
 			<footer class="site-footer">
 				<span class="site-footer-owner">
