--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,7 @@
 		</section>
 		<section class="main-content">
 			<script>
-				var _btfn_options = {
-					always_show_widget: true
-				};
+				_btfn_options.always_show_widget = true;
 			</script>
 			<script src="https://ethertyper.github.io/battleforthenet-widget/widget.js" async></script>
 			{{ content }}
