Add pro-net commerciality widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,13 @@
 		<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 		<link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
 		<link rel="icon" sizes="192x192" href="/images/logo.png">
+                <script>
+                        var _bftn_options = {
+                                debug: true,     
+                                always_show_widget: true
+                        };
+                </script>
+                <script src="https://ethertyper.github.io/battleforthenet-widget/widget.js" async></script>
 	</head>
 	<body>
 		<section class="page-header">
@@ -21,10 +28,6 @@
 			<a href="blog/" class="btn">Blog</a>
 		</section>
 		<section class="main-content">
-			<script>
-				_btfn_options.always_show_widget = true;
-			</script>
-			<script src="https://ethertyper.github.io/battleforthenet-widget/widget.js" async></script>
 			{{ content }}
 			<footer class="site-footer">
 				<span class="site-footer-owner">
